# spsl

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  Toolchain-cross-mingw-linux.cmake  appveyor.yml  codecov.yml  mingw.txt  run_cmake.bat
docs/: Implementation.md  Motivation.md
include/: spsl.hpp
include/spsl/: compat.hpp  hash.hpp  pagealloc.hpp  policies.hpp  storage_array.hpp  storage_password.hpp  stringbase.hpp  stringcore.hpp  type_traits.hpp
test/: example.cpp  test_main.cpp  test_pagealloc.cpp  test_storagearray.cpp  test_storagepassword.cpp  test_stringbase.cpp  test_stringbase_erase.cpp  test_stringbase_find.cpp  test_stringbase_replace.cpp  test_stringcore.cpp  test_stringcore_access.cpp  test_stringcore_assign.cpp  test_stringcore_construct.cpp  test_traits.cpp  testdata.hpp  tests.hpp
